--- a/modules-available/statistics/templates/machine-usage.html
+++ b/modules-available/statistics/templates/machine-usage.html
@@ -9,9 +9,9 @@
 					<div class="col-sm-6">
 						<table class="table table-condensed">
 							<tr>
-								<th>Type</th>
-								<th>When</th>
-								<th>Length</th>
+								<th>{{lang_eventType}}</th>
+								<th>{{lang_when}}</th>
+								<th>{{lang_duration}}</th>
 							</tr>
 							{{#rows}}
 							<tr>
@@ -26,9 +26,9 @@
 						<table class="table table-condensed">
 							{{#hasrows2}}
 							<tr>
-								<th>Type</th>
-								<th>When</th>
-								<th>Length</th>
+								<th>{{lang_eventType}}</th>
+								<th>{{lang_when}}</th>
+								<th>{{lang_duration}}</th>
 							</tr>
 							{{/hasrows2}}
 							{{#rows2}}
