--- a/modules-available/statistics/templates/machine-main.html
+++ b/modules-available/statistics/templates/machine-main.html
@@ -18,37 +18,37 @@
 			<div class="panel-body">
 				<table class="table table-condensed">
 					<tr>
-						<td>{{lang_uuid}}</td>
+						<td class="text-nowrap">{{lang_uuid}}</td>
 						<td>{{machineuuid}}</td>
 					</tr>
 					<tr>
-						<td>{{lang_macAddr}}</td>
+						<td class="text-nowrap">{{lang_macAddr}}</td>
 						<td>{{macaddr}}</td>
 					</tr>
 					<tr>
-						<td>{{lang_ip}}</td>
+						<td class="text-nowrap">{{lang_ip}}</td>
 						<td>{{clientip}}</td>
 					</tr>
 					{{#hostname}}
 					<tr>
-						<td>{{lang_hostname}}</td>
+						<td class="text-nowrap">{{lang_hostname}}</td>
 						<td>{{hostname}}</td>
 					</tr>
 					{{/hostname}}
 					<tr>
-						<td>{{lang_firstSeen}}</td>
+						<td class="text-nowrap">{{lang_firstSeen}}</td>
 						<td>{{firstseen_s}}</td>
 					</tr>
 					<tr>
-						<td>{{lang_lastBoot}}</td>
+						<td class="text-nowrap">{{lang_lastBoot}}</td>
 						<td>{{lastboot_s}}</td>
 					</tr>
 					<tr>
-						<td>{{lang_lastSeen}}</td>
+						<td class="text-nowrap">{{lang_lastSeen}}</td>
 						<td>{{lastseen_s}}</td>
 					</tr>
 					<tr>
-						<td>{{lang_usageState}}</td>
+						<td class="text-nowrap">{{lang_usageState}}</td>
 						<td>
 							{{#state_off}}
 							<span class="glyphicon glyphicon-off"></span> {{lang_machineOff}}
@@ -82,7 +82,7 @@
 			<div class="panel-body">
 				<table class="table table-condensed">
 					<tr>
-						<td>{{lang_cpuModel}}</td>
+						<td class="text-nowrap">{{lang_cpuModel}}</td>
 						<td>
 							{{cpumodel}}
 							{{#Sockets}}
@@ -93,11 +93,11 @@
 						</td>
 					</tr>
 					<tr>
-						<td>{{lang_model}}</td>
+						<td class="text-nowrap">{{lang_model}}</td>
 						<td>{{pcmodel}} ({{manufacturer}})</td>
 					</tr>
 					<tr class="{{ramclass}}">
-						<td>{{lang_ram}}</td>
+						<td class="text-nowrap">{{lang_ram}}</td>
 						<td>
 							{{gbram}}&thinsp;GiB
 							{{#maxram}}({{lang_maximumAbbrev}} {{maxram}}){{/maxram}}
@@ -106,7 +106,7 @@
 					</tr>
 					{{#extram}}
 					<tr>
-						<td>{{lang_ramSlots}}</td>
+						<td class="text-nowrap">{{lang_ramSlots}}</td>
 						<td>
 							{{ramslotcount}}:
 							{{#ramslot}}
@@ -116,11 +116,11 @@
 					</tr>
 					{{/extram}}
 					<tr class="{{hddclass}}">
-						<td>{{lang_tempPart}}</td>
+						<td class="text-nowrap">{{lang_tempPart}}</td>
 						<td>{{gbtmp}}&thinsp;GiB</td>
 					</tr>
 					<tr class="{{kvmclass}}">
-						<td>{{lang_64bitSupport}}</td>
+						<td class="text-nowrap">{{lang_64bitSupport}}</td>
 						<td>{{kvmstate}}</td>
 					</tr>
 				</table>
