mail template editor.

--- a/modules-available/dozmod/templates/images-delete.html
+++ b/modules-available/dozmod/templates/images-delete.html
@@ -5,7 +5,7 @@
 		{{lang_subHeading}}
 	</div>
 	<div class="panel-body">
-		<p>{{lang_description}}</p>
+		<p>{{lang_description_delete_images}}</p>
 		<div class="table-responsive">
 			<form id="delform" method="post" action="?do=DozMod" onsubmit="return slxPostdel()">
 				<input type="hidden" name="token" value="{{token}}">
