--- a/modules-available/dozmod/templates/runtimeconfig.html
+++ b/modules-available/dozmod/templates/runtimeconfig.html
@@ -1,4 +1,4 @@
-<h2>{{lang_runtimeConfigHeadline}}</h2>
+<h2 id="runtime-configuration">{{lang_runtimeConfigHeadline}}</h2>
 
 <div class="panel panel-default">
 	<div class="panel-heading">
