--- a/modules-available/dozmod/templates/userlist.html
+++ b/modules-available/dozmod/templates/userlist.html
@@ -1,4 +1,4 @@
-<h2>{{lang_userList}}</h2>
+<h2 id="users">{{lang_userList}}</h2>
 
 <div class="panel panel-default">
 	<div class="panel-heading">
