--- a/modules-available/roomplanner/templates/page.html
+++ b/modules-available/roomplanner/templates/page.html
@@ -311,17 +311,20 @@
 
 	</div>
 
-	<div class="panel panel-default">
+	<div class="panel panel-default" style="display:none">
 		<div class="panel-heading"><h3 class="panel-title">Store / Restore</h3></div>
 		<div class="panel-body">
-			<a class="btn btn-default" href="#" role="button" id="loadButton">Load</a>
-			<a class="btn btn-default" href="#" role="button" id="serializeButton">Serialize</a>
-			<div class="form-group">
-			<label for="serializedRoom" class="col-sm-2 control-label">In-/Output</label>
-			<textarea class="form-control" rows="5" name="serializedRoom" id="serializedRoom"></textarea>
-			</div>
+			<form id="roomForm" method="POST" action="?do=roomplanner&locationid={{locationid}}">
+				<input type="hidden" name="token" value="{{token}}">
+				<input type="hidden" name="action" value="save">
+				<div class="form-group">
+					<label for="serializedRoom" class="col-sm-2 control-label">In-/Output</label>
+					<textarea class="form-control" rows="5" name="serializedRoom" id="serializedRoom">{{{roomConfiguration}}}</textarea>
+				</div>
+			</form>
 		</div>
 	</div>
+	<button id="saveBtn" class="btn btn-success">Save</button>
 
 </body>
 </html>
@@ -345,6 +348,7 @@ document.addEventListener("DOMContentLoaded", function () {
 	).done(function() {
 		$.getScript("modules/roomplanner/js/init.js", function() {
 			initRoomplanner();
+			roomplanner.load($('#serializedRoom').val());
 			console.log(subnetMachines);
 		});
 	});
