Added link from locations module to roomplanner.

--- a/modules-available/locations/templates/location-subnets.html
+++ b/modules-available/locations/templates/location-subnets.html
@@ -59,6 +59,12 @@
 			</tr>
 		</table>
 		<br>
+		<div class="btn-group">
+			{{#isLeaf}}
+			<a class="btn btn-default" href="?do=roomplanner&amp;locationid={{locationid}}"><span class="glyphicon glyphicon-move"></span>{{lang_editRoomplan}}</a>
+			{{/isLeaf}}
+
+		</div>
 		<div class="pull-right">
 			<button type="submit" class="btn btn-primary">{{lang_save}}</button>
 		</div>
