--- a/modules-available/dozmod/templates/runtimeconfig.html
+++ b/modules-available/dozmod/templates/runtimeconfig.html
@@ -5,90 +5,97 @@
 		{{lang_runtimeConfig}}
 	</div>
 	<div class="panel-body">
-		<p> {{lang_descriptionRuntimeConfig}}</p>
+		<h3>{{lang_defaultPermissions}}</h3>
+		<p><i>{{lang_descriptionPermissionConfig}}</i></p>
 		<form action="?do=DozMod" method="post" id="runtimeconf" role="form">
 			<input type="text" name="prevent_autofill" id="prevent_autofill" value="" style="position:absolute;top:-200px" tabindex="-1">
 			<input type="password" name="password_fake" id="password_fake" value="" style="position:absolute;top:-200px" tabindex="-1">
 
 
 			<fieldset class="form-group">
-				<h4>{{lang_defaultLecturePermissions}}</h4>
+				<legend>{{lang_defaultLecturePermissions}}</legend>
 
-					<input type="hidden" 	name="defaultLecturePermissions[edit]" value="0"/>
-					<input type="hidden" 	name="defaultLecturePermissions[admin]" value="0"/>
+				<input type="hidden" 	name="defaultLecturePermissions[edit]" value="0"/>
+				<input type="hidden" 	name="defaultLecturePermissions[admin]" value="0"/>
 
-					<div class="checkbox">
-						<input type="checkbox" name="defaultLecturePermissions[edit]" value="1" {{defaultLecturePermissions.edit}} id ="lecture_edit" class="form-control"/>
-						<label>
-							{{lang_lecturePermissionEdit}}*
-						</label>
-					</div>
 				<div class="checkbox">
-						<input type="checkbox"  name="defaultLecturePermissions[admin]" value="1" {{defaultLecturePermissions.admin}} id ="lecture_admin" class="form-control"/>
-					<label> 
-						{{lang_lecturePermissionAdmin}}*
+					<input type="checkbox"  name="defaultLecturePermissions[admin]" value="1" {{defaultLecturePermissions.admin}} id ="lecture_admin" class="form-control">
+					<label>
+						{{lang_lecturePermissionAdmin}}
+					</label>
+				</div>
+				<div class="checkbox">
+					<input type="checkbox" name="defaultLecturePermissions[edit]" value="1" {{defaultLecturePermissions.edit}} id ="lecture_edit" class="form-control">
+					<label>
+						{{lang_lecturePermissionEdit}}
 					</label>
 				</div>
 
 			</fieldset>
 
-			<fieldset class="xform-group">
-				<h4>{{lang_defaultImagePermissions}}</h4>
+			<fieldset class="form-group">
+				<legend>{{lang_defaultImagePermissions}}</legend>
 				<input type="hidden" 	name="defaultImagePermissions[edit]" value="0"/>
 				<input type="hidden" 	name="defaultImagePermissions[admin]" value="0"/>
 				<input type="hidden" 	name="defaultImagePermissions[download]" value="0"/>
 				<input type="hidden" 	name="defaultImagePermissions[link]" value="0"/>
 
 				<div class="checkbox">
-						<input type="checkbox" name="defaultImagePermissions[edit]" value="1" {{defaultImagePermissions.edit}} id ="image_edit" class="form-control"/>
-					<label>
-						{{lang_defaultImagePermissionEdit}} *
-					</label>
-				</div>
-				<div class="checkbox">
-						<input type="checkbox"  name="defaultImagePermissions[admin]" value="1" {{defaultImagePermissions.admin}} id ="image_admin" class="form-control"/ >
+					<input type="checkbox"  name="defaultImagePermissions[admin]" value="1" {{defaultImagePermissions.admin}} id ="image_admin" class="form-control">
 					<label class="" for="image_admin">
-						{{lang_defaultImagePermissionAdmin}} *
-					</label>
-				</div>
-
-				<div class="checkbox">
-					<input type="checkbox"  name="defaultImagePermissions[download]" value="1" {{defaultImagePermissions.download}} id ="image_download" class="form-control"/ >
-					<label>
-						{{lang_defaultImagePermissionDownload}} *
+						{{lang_defaultImagePermissionAdmin}}
 					</label>
 				</div>
 				<div class="checkbox">
-					<input type="checkbox"  name="defaultImagePermissions[link]" value="1" {{defaultImagePermissions.link}} id ="image_link" class="form-control"/ >
+						<input type="checkbox" name="defaultImagePermissions[edit]" value="1" {{defaultImagePermissions.edit}} id ="image_edit" class="form-control">
 					<label>
-						{{lang_defaultImagePermissionLink}} *
+						{{lang_defaultImagePermissionEdit}}
 					</label>
 				</div>
-
-
+				<div class="checkbox">
+					<input type="checkbox"  name="defaultImagePermissions[download]" value="1" {{defaultImagePermissions.download}} id ="image_download" class="form-control">
+					<label>
+						{{lang_defaultImagePermissionDownload}}
+					</label>
+				</div>
+				<div class="checkbox">
+					<input type="checkbox"  name="defaultImagePermissions[link]" value="1" {{defaultImagePermissions.link}} id ="image_link" class="form-control">
+					<label>
+						{{lang_defaultImagePermissionLink}}
+					</label>
+				</div>
 			</fieldset>
-			<fieldset>
-				<h4>{{lang_runtimeConfigLimits}}</h4>
-				<div class="input-group">
-					<label class="input-group-addon slx-ga2" for="max_image_validity">{{lang_maxImageValidity}} *</label>
-					<input name="maxImageValidityDays" id ="max_image_validity" class="form-control" type="number" value="{{maxImageValidityDays}}"></input>
-				</div>
-				<div class="input-group">
-					<label class="input-group-addon slx-ga2" for="max_lecture_validity">{{lang_maxLectureVisibility}} *</label>
-					<input name="maxLectureValidityDays" id ="max_lecture_validity" class="form-control" type="number" value="{{maxLectureValidityDays}}"></input>
-				</div>
-				<div class="input-group">
-					<label class="input-group-addon slx-ga2" for="max_transfers">{{lang_maxTransfers}} *</label>
-					<input name="maxTransfers" id ="max_transfers" class="form-control" type="number" value="{{maxTransfers}}"></input>
-				</div>
 
+			<fieldset>
+				<h3>{{lang_runtimeConfigLimits}}</h3>
+				<p><i>{{lang_descriptionRuntimeLimits}}</i></p>
+				<table class="table-input-group">
+					<tr class="input-group">
+						<td class="input-group-addon" for="max_image_validity">{{lang_maxImageValidity}}</td>
+						<td>
+							<input name="maxImageValidityDays" id="max_image_validity" class="form-control" type="number" value="{{maxImageValidityDays}}" min="7" max="999" pattern="^\d+$">
+						</td>
+					</tr>
+					<tr class="input-group">
+						<td class="input-group-addon" for="max_lecture_validity">{{lang_maxLectureVisibility}}</td>
+						<td>
+							<input name="maxLectureValidityDays" id="max_lecture_validity" class="form-control" type="number" value="{{maxLectureValidityDays}}" min="1" max="999" pattern="^\d+$">
+						</td>
+					</tr>
+					<tr class="input-group">
+						<td class="input-group-addon" for="max_transfers">{{lang_maxTransfers}}</td>
+						<td>
+							<input name="maxTransfers" id="max_transfers" class="form-control" type="number" value="{{maxTransfers}}" min="1" max="10" pattern="^\d+$">
+						</td>
+					</tr>
+				</table>
 			</fieldset>
 
 
 			<br>
 			<input type="hidden" name="token" value="{{token}}">
 			<input type="hidden" name="action" value="runtime">
-			<button class="btn btn-primary btn-sm" type="submit" name="button" value="save">{{lang_save}}</button>
+			<button class="btn btn-primary" type="submit" name="button" value="save">{{lang_save}}</button>
 		</form>
 	</div>
 </div>
