--- a/modules-available/webinterface/templates/https.html
+++ b/modules-available/webinterface/templates/https.html
@@ -4,7 +4,7 @@
 	<div class="panel panel-default">
 		<div class="panel-heading">{{lang_httpsSettings}}</div>
 		<div class="panel-body">
-			<p>{{lang_description}}</p>
+			<p>{{lang_httpsDescription}}</p>
 			{{^httpsEnabled}}
 			<p>{{lang_HttpsIsDisabled}}</p>
 			{{/httpsEnabled}}
