--- a/modules-available/webinterface/templates/passwords.html
+++ b/modules-available/webinterface/templates/passwords.html
@@ -4,7 +4,7 @@
 	<div class="panel panel-default">
 		<div class="panel-heading">{{lang_passwordFields}}</div>
 		<div class="panel-body">
-			<p>{{lang_description}}</p>
+			<p>{{lang_passwordsDescription}}</p>
 			<div class="input-group" onclick="$('#pmshow').prop('checked', true)">
 				<span class="input-group-addon"><input id="pmshow" type="radio" name="mode" value="show" {{selected_show}}></span>
 				<span class="form-control">
