Clean up css a bit

--- a/modules-available/dozmod/templates/orglist.html
+++ b/modules-available/dozmod/templates/orglist.html
@@ -16,7 +16,7 @@
 				<tbody>
 					{{#organizations}}
 					<tr>
-						<td class="text-left slx-nowrap">{{displayname}}</td>
+						<td class="text-left text-nowrap">{{displayname}}</td>
 						<td class="text-nowrap">
 							<input onclick="seto('setorglogin', this, '{{organizationid}}')" type="checkbox" {{{canlogin}}}>
 						</td>
