--- a/modules-available/statistics/templates/clientlist.html
+++ b/modules-available/statistics/templates/clientlist.html
@@ -58,7 +58,7 @@
 	</tr>
 	{{#rows}}
 	<tr>
-		<td class="slx-nowrap">
+		<td class="text-nowrap">
 			{{#hasnotes}}<span class="glyphicon glyphicon-exclamation-sign pull-right"></span>{{/hasnotes}}
 			{{#state_off}}
 			<span class="glyphicon glyphicon-off" title="{{lang_machineOff}}"></span>
