--- a/modules-available/statistics/templates/kvmstate.html
+++ b/modules-available/statistics/templates/kvmstate.html
@@ -13,7 +13,7 @@
 						</tr>
 						{{#rows}}
 						<tr id="kvm{{kvmstate}}">
-							<td class="text-left slx-nowrap">
+							<td class="text-left text-nowrap">
 								<a class="filter-val" data-filter-val="{{kvmstate}}" href="?do=Statistics&amp;show=stat&amp;filters={{query}}~,~kvmstate={{kvmstate}}">{{kvmstate}}</a>
 							</td>
 							<td class="text-right">{{count}}</td>
