--- a/modules-available/statistics/templates/memory.html
+++ b/modules-available/statistics/templates/memory.html
@@ -13,7 +13,7 @@
 						</tr>
 						{{#rows}}
 						<tr id="ramid{{gb}}" class="{{class}}">
-							<td class="text-left slx-nowrap">
+							<td class="text-left text-nowrap">
 								<a class="filter-val" data-filter-val="{{gb}}" href="?do=Statistics&amp;show=stat&amp;filters={{query}}~,~gbram={{gb}}">{{gb}}&thinsp;GiB</a>
 							</td>
 							<td class="text-right">{{count}}</td>
