--- a/modules-available/statistics/templates/newclients.html
+++ b/modules-available/statistics/templates/newclients.html
@@ -14,7 +14,7 @@
 				</tr>
 				{{#rows}}
 				<tr style="{{style}}">
-					<td class="slx-nowrap"><a href="?do=Statistics&amp;uuid={{machineuuid}}">{{hostname}}</a></td>
+					<td class="text-nowrap"><a href="?do=Statistics&amp;uuid={{machineuuid}}">{{hostname}}</a></td>
 					<td class="text-right">{{firstseen}}</td>
 					<td class="{{kvmclass}}">{{kvmicon}}</td>
 					<td class="text-right {{ramclass}}">{{gbram}}&thinsp;GiB</td>
