--- a/modules-available/sysconfig/templates/custom-filelist.html
+++ b/modules-available/sysconfig/templates/custom-filelist.html
@@ -4,7 +4,7 @@
 {{#files}}
 	<tr>
 		{{#isdir}}
-			<td class="fileEntry isdir" colspan="2">{{name}}</td>
+			<td class="fileEntry slx-bold" colspan="2">{{name}}</td>
 		{{/isdir}}
 		{{^isdir}}
 			<td class="fileEntry">{{name}}</td>
