--- a/modules-available/sysconfig/templates/custom-fileselect.html
+++ b/modules-available/sysconfig/templates/custom-fileselect.html
@@ -16,7 +16,7 @@
 	{{#files}}
 		<tr>
 			{{#isdir}}
-				<td class="fileEntry isdir" colspan="2">{{name}}</td>
+				<td class="fileEntry slx-bold" colspan="2">{{name}}</td>
 			{{/isdir}}
 			{{^isdir}}
 				<td class="fileEntry">{{name}}</td>
