[dozmod] Show wasted space in blockstats

--- a/modules-available/dozmod/templates/blockstats-details.html
+++ b/modules-available/dozmod/templates/blockstats-details.html
@@ -1,6 +1,6 @@
 <table class="table table-bordered table-striped">
 	<tr>
-		<th>{{lang_imageName}}</th>
+		<th>{{lang_image}}</th>
 		<th>{{lang_createTime}}</th>
 		<th>{{lang_fileSize}}</th>
 		<th>{{lang_blockCount}}</th>
