--- a/modules-available/dozmod/templates/blockstats.html
+++ b/modules-available/dozmod/templates/blockstats.html
@@ -1,8 +1,12 @@
+<div class="alert alert-info">
+	{{lang_spaceWastedDuplication}}: {{spacewasted}}
+</div>
+
 <table class="table table-condensed table-striped" style="width: auto">
 	<tr>
 		<th>{{lang_hash}}</th>
 		<th>{{lang_size}}</th>
-		<th>{{lang_count}}</th>
+		<th>{{lang_blockCount}}</th>
 	</tr>
 	{{#hashes}}
 	<tr>
