just use fullscreen to mitigate the positioning bugs.

--- a/modules-available/locations/templates/location-subnets.html
+++ b/modules-available/locations/templates/location-subnets.html
@@ -61,7 +61,11 @@
 		<br>
 		<div class="btn-group">
 			{{#isLeaf}}
-			<a class="btn btn-default" href="?do=roomplanner&amp;locationid={{locationid}}"><span class="glyphicon glyphicon-move"></span>{{lang_editRoomplan}}</a>
+			<a class="btn btn-default" href="?do=roomplanner&amp;locationid={{locationid}}"
+							  target="_blank"
+				>
+				<span class="glyphicon glyphicon-move"></span>{{lang_editRoomplan}}
+			</a>
 			{{/isLeaf}}
 
 		</div>
