removed the tooltip plugin from jquery-ui.
jQuery-UI's tooltip() conflicted with the tooltip() function of
bootstrap which we want to use.

--- a/modules-available/roomplanner/templates/page.html
+++ b/modules-available/roomplanner/templates/page.html
@@ -324,7 +324,7 @@
 			</form>
 		</div>
 	</div>
-	<button id="saveBtn" class="btn btn-success">Save</button>
+	<button id="saveBtn" class="btn btn-success" onclick="window.close(); return false">Save</button>
 
 </body>
 </html>
