added "Zurück"-Buttons to each add-module page.

--- a/modules-available/sysconfig/templates/ldap-start.html
+++ b/modules-available/sysconfig/templates/ldap-start.html
@@ -57,9 +57,16 @@
 	</div>
 	<i>{{lang_sslDescription}}</i>
 	<br>
-	<div class="pull-right">
+
+
+
+	<div class="btn-group">
+		<a class="btn btn-default" href="?do=SysConfig&action=addmodule">{{lang_back}}</a>
+	</div>
+	<div class="btn-group pull-right">
 		<button type="submit" class="btn btn-primary">{{lang_next}} &raquo;</button>
 	</div>
+
 	<div class="clearfix"></div>
 	<hr>
 	<div {{^ssl}}style="display:none"{{/ssl}} id="cert-box">
