--- a/modules-available/sysconfig/templates/branding-start.html
+++ b/modules-available/sysconfig/templates/branding-start.html
@@ -20,6 +20,12 @@
 				</span>
 			</div>
 	</div>
-	<button type="submit" class="btn btn-primary">{{lang_upload}}</button>
+
+	<div class="btn-group">
+		<a class="btn btn-default" href="?do=SysConfig&action=addmodule">{{lang_back}}</a>
+	</div>
+	<div class="btn-group pull-right">
+		<button type="submit" class="btn btn-primary">{{lang_upload}}</button>
+	</div>
 </form>
 
