minor improvements including #2970.

--- a/modules-available/roomplanner/templates/page.html
+++ b/modules-available/roomplanner/templates/page.html
@@ -34,7 +34,7 @@
 
 			</div>
 			<div class="modal-footer">
-				<button class="btn btn-default pull-left">{{lang_cancel}}</button>
+				<button class="btn btn-default pull-left" data-dismiss="modal" >{{lang_cancel}}</button>
 				<button class="btn btn-primary" id="selectMachineButton">{{lang_select}}</button>
 			</div>
 		</div>
