--- a/modules-available/dozmod/templates/actionlog-log.html
+++ b/modules-available/dozmod/templates/actionlog-log.html
@@ -11,9 +11,9 @@
 	</tr>
 	{{#events}}
 	<tr>
-		<td>{{dateline_s}}</td>
+		<td class="text-nowrap">{{dateline_s}}</td>
 		{{#showActor}}
-		<td>
+		<td style="min-width:140px">
 			{{#uuserid}}
 			<a href="?do=dozmod&amp;section=actionlog&amp;action=showuser&amp;uuid={{uuserid}}">{{ulastname}}, {{ufirstname}}</a>
 			{{/uuserid}}
