--- a/modules-available/statistics/templates/machine-main.html
+++ b/modules-available/statistics/templates/machine-main.html
@@ -66,7 +66,14 @@
 							<div>{{logintime_s}}</div>
 							{{/state_occupied}}
 							{{#session}}
-							<div>{{session}}</div>
+							<div>
+								{{#lectureid}}
+								<a href="?do=dozmod&section=actionlog&action=showtarget&uuid={{lectureid}}">{{session}}</a>
+								{{/lectureid}}
+								{{^lectureid}}
+								{{session}}
+								{{/lectureid}}
+							</div>
 							{{/session}}
 						</td>
 					</tr>
