added "zurück"-Button to "Generisches Modul".

--- a/modules-available/sysconfig/templates/custom-upload.html
+++ b/modules-available/sysconfig/templates/custom-upload.html
@@ -14,5 +14,11 @@
 				</span>
 			</div>
 	<p class="help-block">{{lang_supportedFiles}}: .tar.gz, .tar.bz2, .zip</p>
-	<button type="submit" class="btn btn-primary">{{lang_upload}}</button>
+
+	<div class="btn-group">
+		<a class="btn btn-default" href="?do=SysConfig&action=addmodule">{{lang_back}}</a>
+	</div>
+	<div class="btn-group pull-right">
+		<button type="submit" class="btn btn-primary">{{lang_upload}}</button>
+	</div>
 </form>
