scaling orientation now is viewport-center instead of top left position - magnifier are clickable for scaling

--- a/modules-available/roomplanner/style.css
+++ b/modules-available/roomplanner/style.css
@@ -35,6 +35,9 @@ body.full #drawpanel {
 #scaleslider {
 	position:relative;}
 
+#zoom-out, #zoom-in {
+	cursor:pointer;
+}
 
 
 #scaleContainer .glyphicon {
