--- a/modules-available/roomplanner/templates/page.html
+++ b/modules-available/roomplanner/templates/page.html
@@ -303,8 +303,8 @@
 			</div>
 			<div id="scaleContainer">
 				<div id="scaleslider"></div>
-				<span class="glyphicon glyphicon-zoom-out" aria-hidden="true"></span>
-				<span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
+				<span id="zoom-out" class="glyphicon glyphicon-zoom-out" aria-hidden="true"></span>
+				<span id="zoom-in" class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span>
 			</div>
 		</div>
 
