--- a/modules-available/exams/templates/page-add-edit-exam.html
+++ b/modules-available/exams/templates/page-add-edit-exam.html
@@ -91,6 +91,10 @@
 				</select>
 			</div>
 		</div>
+		<div class="form-group col-xs-12">
+			<div class="checkbox"><input id="autologin" type="checkbox" name="autologin" value="demo" class="form-control" {{#exam.autologin}}checked{{/exam.autologin}}><label for="autologin">{{lang_autoLogin}}</label></div>
+			<p><i>{{lang_autoLoginInfo}}</i></p>
+		</div>
 		<div class="col-xs-12" id="lecture-info">
 			bla
 		</div>
