Fix some translations

--- a/modules-available/locations/templates/subnets.html
+++ b/modules-available/locations/templates/subnets.html
@@ -29,7 +29,7 @@
 			{{/list}}
 		</table>
 		<div>
-			<button type="submit" class="btn btn-primary">Späschohn (geht noch nicht!)</button>
+			<button type="submit" class="btn btn-primary">{{lang_save}}</button>
 		</div>
 	</form>
 </div>
